--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .get_meme_button {
   background: linear-gradient(90.41deg, #711f8d 1.14%, #a818da 100%);
-  width: 75%;
-  height: 5rem;
+  width: max(75%, 45rem);
+  min-height: 5rem;
   border-radius: 1rem;
   font-size: 3rem;
 }
