--- a/src/components/StyledInput.css
+++ b/src/components/StyledInput.css
@@ -2,11 +2,10 @@
   border: 1px solid #d5d4d8;
   box-sizing: border-box;
   border-radius: 0.25rem;
-  width: max(35%, 16rem);
-  margin: 0 15% 0 15%;
+  width: 45vw;
   height: 4rem;
   font-family: 'Karla', sans-serif;
-  margin-inline: 5rem;
+  margin-inline: 5vmin;
   color: black;
   font-size: 3rem;
 }
