--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,4 +1,4 @@
-.navbar {
+.header {
   background: linear-gradient(90.41deg, #711f8d 1.14%, #a818da 100%);
   display: flex;
   height: 5rem;
@@ -6,6 +6,7 @@
   align-items: center;
   width: 100%;
   font-size: 2rem;
+  color: white;
 }
 .left_span {
   margin: 0 auto 0 0;
